# nfc-eink

./: README.ja.md  README.md  pyproject.toml
src/nfc_eink/: card.py  protocol.py
